# hyperscanning

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: config.yaml  features.yaml  paths.yaml  preprocessing.yaml  schema.json  trf.yaml  viz.yaml
config/profiles/: local.yaml
docs/: README.md  api.rst  cli.rst  conf.py  index.rst  requirements.txt  usage.rst  workflow.rst
docs/_generated/: hyper.annotations.palign_core.rst  hyper.annotations.rst  hyper.cli.commands.palign_to_ipu.rst  hyper.cli.commands.preprocessing.downsampling.rst  hyper.cli.commands.preprocessing.epoching.rst  hyper.cli.commands.preprocessing.filtering.rst  hyper.cli.commands.preprocessing.ica.rst  hyper.cli.commands.preprocessing.metadata.rst  hyper.cli.commands.preprocessing.rst  hyper.cli.rst  hyper.cli.types.rst  hyper.config.rst  hyper.constants.rst  hyper.errors.rst  hyper.paths.rst  hyper.preprocessing.downsampling.rst  hyper.preprocessing.epoching.rst  hyper.preprocessing.filtering.rst  hyper.preprocessing.ica.rst  hyper.preprocessing.reref.rst  hyper.preprocessing.rst  hyper.testing.regression.rst  hyper.testing.rst  hyper.viz.misc.rst  hyper.viz.rst  hyper.viz.style.rst
docs/features/: README.md  continuous_feature_template.json  envelope.json  events_feature_template.json  events_features_readme.md  f0.json  features_continuous.md  features_events.md
notebooks/: ica_icalabel.ipynb
scripts/lm_scripts/: export_lm_event_features.py
src/features/: intensity.py
src/hyper/: __init__.py  config.py  constants.py  (+3 more)
tests/: README.md  conftest.py
workflow/: Snakefile
(+280 files in other folders)
